tests/fail/Throws.java
package fail;

import java.lang.System;

public class Throws {

  public static void main(String[] args ) {
    throws = "This can't happen";
  }

}
